Fix the header/EuiDataGrid overlapping

--- a/src/core/public/chrome/ui/header/_index.scss
+++ b/src/core/public/chrome/ui/header/_index.scss
@@ -8,7 +8,7 @@
 }
 
 .euiDataGrid__restrictBody .chrHeaderWrapper {
-  z-index: 0;
+  display: none;
 }
 
 .chrHeaderHelpMenu__version {
